--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
   <link rel="stylesheet" href="/public/css/add.css">
   <link rel="stylesheet" href="/public/css/add2022.css">
   <script src="/public/js/cssua.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
 </head>
 
 <body>
@@ -610,8 +611,6 @@
   <!-- /.site-wrapper -->
 
   <script src="/public/js/navbar.js"></script>
-  <script src="/public/js/jquery-3.3.1.min.js"></script>
-  <script src="/public/js/jquery.easing.1.3.js"></script>
   <script src="/public/js/imagesloaded.pkgd.min.js"></script>
   <script src="/public/js/masonry.pkgd.min.js"></script>
   <script src="/public/js/perfect-scrollbar.min.js"></script>
