--- a/public/vision.html
+++ b/public/vision.html
@@ -4,21 +4,21 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>content</title>
+    <title>Vision & Mission</title>
     <meta name="viewport" content="width=device-width">
-    <link rel="shortcut icon" type="image/x-icon" href="../img/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
     <meta name="format-detection" content="telephone=no">
-    <link rel="stylesheet" href="../css/sanitize.min.css">
+    <link rel="stylesheet" href="css/sanitize.min.css">
     <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
         integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/swiper.min.css">
-    <link rel="stylesheet" href="../css/module.css">
-    <link rel="stylesheet" href="../css/base.css">
-    <link rel="stylesheet" href="../css/add.css">
-    <link rel="stylesheet" href="../css/add2022.css">
-    <link rel="stylesheet" href="../css/add2022.css">
-    <script src="../js/cssua.min.js"></script>
+    <link rel="stylesheet" href="css/swiper.min.css">
+    <link rel="stylesheet" href="css/module.css">
+    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/add.css">
+    <link rel="stylesheet" href="css/add2022.css">
+    <link rel="stylesheet" href="css/add2022.css">
+    <script src="js/cssua.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
 </head>
 
@@ -28,8 +28,8 @@
     <div class="site-wrapper">
         <header class="site-header js-header-narrow">
             <div class="site-header-logo">
-                <a href="../" class="fade">
-                    <span class="logo"><img src="../img/header/name.jpg"></span>
+                <a href="" class="fade">
+                    <span class="logo"><img src="img/header/name.jpg"></span>
                 </a>
             </div>
             <!-- /.site-header-logo -->
@@ -66,7 +66,7 @@
                         <div class="search-cont toggle-cont2" style="z-index: 100;">
                             <div class="dummy"></div>
                             <div class="search-cont-wrap">
-                                <form method="get" action="../search.html">
+                                <form method="get" action="search.html">
                                     <input class="search-input" type="text" placeholder="search" name="q" value="">
                                     <button class="search-submit fade" type="submit">search</button>
                                 </form>
@@ -88,24 +88,28 @@
         <main class="site-main ">
             <nav class="breadcrumb sp-hide">
                 <ol class="breadcrumb-wrap">
-                    <li><a href="../" class="fade"><i class="fas fa-home"></i> home</a></li>
-                    <li><a href="../schoolguide/" class="fade">Introduction</a></li><!-- 4-2-->
-                    <li>Welcome Message</li><!-- 5-1-->
+                    <li><a href="" class="fade"><i class="fas fa-home"></i> home</a></li>
+                    <li><a href="schoolguide/" class="fade">Introduction</a></li><!-- 4-2-->
+                    <li>Vision & Mission</li><!-- 5-1-->
                 </ol>
             </nav>
             <!-- /.breadcrumb -->
             <section class="container">
                 <div class="container-wrap"><!-- .a-01 -->
                     <header class="a-01">
-                        <h2 class="tt ft36">Welcome Message</h2>
+                        <h2 class="tt ft36">Vision & Mission</h2>
                     </header><!-- /.a-01 --> <!-- .j-12b -->
                     <section class="j-12b">
                         <div class="j-12b_wrap">
-                            <p class="tx ft16">Hong Kong Institute of Technology (HKIT) is a diversified, non-profit making and self-financed tertiary institute offering a wide range of programmes at post-secondary levels. As an international institute which emphasizes students' international exposure and diversity development, HKIT is the first institute which offers full-time and part-time overseas degrees which are both accredited in Hong Kong and internationally recognised. HKIT also offers accredited programmes ranging from Yi Jin level all the way to Associate Degree, overseas Bachelor Degree, Master Degree and Doctoral Degree. Students can choose from over 20 study areas in three major aspects: Arts, Business Administration, and Science and Technology. All these programmes are accredited by the Hong Kong Council for Accreditation of Academic and Vocational Qualifications (HKCAAVQ).</p>
+                            <h2 class="tt ft36">Vision</h2>
+                            <p class="tx ft16">Hong Kong Institute of Technology has a vision to become a reputable self-financing tertiary institute with international perspectives, moral well-being and professionalism for students.</p>
+                        
+                        <h2 class="tt ft36">Mission</h2>
+                            <p class="tx ft16">Hong Kong Institute of Technology is committed to the provision of qualified higher education to the local non-elitist students. With the philosophy of "Small is beautiful" underpinning its development, HKIT has adopted a whole-institution-whole-person development approach to education which emphasizes pastoral care, enabling her students to develop and realize their potentials to benefit themselves, the community and the country.</p>
                         </div>
                     </section>
-                    <!-- /.j-12b -->
                 </div>
+                    <!-- /.j-12b -->
             </section>
 
             <div class="f-01">
@@ -119,34 +123,34 @@
                     <div class="c-05b">
                         <div class="c-05b_wrap">
                             <ul>
-                                <li><a href="../schoolguide/diary/">schoolevent
+                                <li><a href="schoolguide/diary/">schoolevent
                                         <i class="fas fa-angle-right"></i>
                                     </a></li>
-                                <li><a href="../schoolguide/kengaku.html">schoolevent
-                                        <i class="fas fa-angle-right"></i>
-                                    </a></li>
-
-                                <li><a href="../schoolguide/origin.html">schoolevent
+                                <li><a href="schoolguide/kengaku.html">schoolevent
                                         <i class="fas fa-angle-right"></i>
                                     </a></li>
 
-                                <li><a href="../schoolguide/trait.html">schoolevent
+                                <li><a href="schoolguide/origin.html">schoolevent
                                         <i class="fas fa-angle-right"></i>
                                     </a></li>
 
-                                <li><a href="../schoolguide/history.html">schoolevent
+                                <li><a href="schoolguide/trait.html">schoolevent
                                         <i class="fas fa-angle-right"></i>
                                     </a></li>
 
-                                <li><a href="../schoolguide/campusmap.html">schoolevent
+                                <li><a href="schoolguide/history.html">schoolevent
                                         <i class="fas fa-angle-right"></i>
                                     </a></li>
 
-                                <li><a href="../schoolguide/pamphlet.html">schoolevent
+                                <li><a href="schoolguide/campusmap.html">schoolevent
                                         <i class="fas fa-angle-right"></i>
                                     </a></li>
 
-                                <li><a href="../schoolguide/movie.html">schoolevent
+                                <li><a href="schoolguide/pamphlet.html">schoolevent
+                                        <i class="fas fa-angle-right"></i>
+                                    </a></li>
+
+                                <li><a href="schoolguide/movie.html">schoolevent
                                         <i class="fas fa-angle-right"></i>
                                     </a></li>
 
@@ -168,32 +172,32 @@
                         <div class="swiper-wrapper">
 
                             <div class="swiper-slide"><a class="fade" href="/page/contextpage_tem.html" target="_blank">
-                                    <img src="../../upload/download.jpeg">
+                                    <img src="../upload/download.jpeg">
                                 </a>
                             </div>
 
                             <div class="swiper-slide"><a class="fade" href="/ss/exploration/">
-                                    <img src="../../upload/download (1).jpeg">
+                                    <img src="../upload/download (1).jpeg">
                                 </a>
                             </div>
 
                             <div class="swiper-slide"><a class="fade" href="/schoolguide/pamphlet.html">
-                                    <img src="../../upload/download (2).jpeg">
+                                    <img src="../upload/download (2).jpeg">
                                 </a>
                             </div>
 
                             <div class="swiper-slide"><a class="fade" href="/info/office/">
-                                    <img src="../../upload/download (3).jpeg">
+                                    <img src="../upload/download (3).jpeg">
                                 </a>
                             </div>
 
                             <div class="swiper-slide"><a class="fade" href="/page/contextpage_tem.html" target="_blank">
-                                    <img src="../../upload/download (4).jpeg">
+                                    <img src="../upload/download (4).jpeg">
                                 </a>
                             </div>
 
                             <div class="swiper-slide"><a class="fade" href="/page/contextpage_tem.html">
-                                    <img src="../../upload/download (5).jpeg">
+                                    <img src="../upload/download (5).jpeg">
                                 </a>
                             </div>
                         </div>
@@ -207,7 +211,7 @@
         <footer class="site-footer">
             <div class="site-footer-top">
                 <div class="logo">
-                    <img src="../img/footer/logo512.png">
+                    <img src="img/footer/logo512.png">
                 </div>
 
                 <div class="site-footer-link-index sp-hide">
@@ -236,7 +240,7 @@
                         <div class="wrap">
                             <div class="ft-txt">
                                 <div class="logo">
-                                    <a href="/"><img src="../img/header/name.jpg"></a>
+                                    <a href="/"><img src="img/header/name.jpg"></a>
                                 </div>
                                 <div class="group-sites">
                                     <ul>
@@ -253,18 +257,18 @@
                     <!-- /.site-footer-btm -->
 
         </footer>
-        <aside class="pagetop"><a href="#pagetop" class="fade"><img src="../img/footer/pagetop.png"></a></aside>
+        <aside class="pagetop"><a href="#pagetop" class="fade"><img src="img/footer/pagetop.png"></a></aside>
         <!-- /.pagetop -->
     </div>
     <!-- /.site-wrapper -->
 
-    <script src="../js/navbar.js"></script>
-    <script src="../js/imagesloaded.pkgd.min.js"></script>
-    <script src="../js/masonry.pkgd.min.js"></script>
-    <script src="../js/perfect-scrollbar.min.js"></script>
-    <script src="../js/ofi.min.js"></script>
-    <script src="../js/swiper.min.js"></script>
-    <script src="../js/plugins.js"></script>
+    <script src="js/navbar.js"></script>
+    <script src="js/imagesloaded.pkgd.min.js"></script>
+    <script src="js/masonry.pkgd.min.js"></script>
+    <script src="js/perfect-scrollbar.min.js"></script>
+    <script src="js/ofi.min.js"></script>
+    <script src="js/swiper.min.js"></script>
+    <script src="js/plugins.js"></script>
 </body>
 
 </html>
