--- a/contextpage_tem.html
+++ b/contextpage_tem.html
@@ -45,7 +45,7 @@
                                 </ul>
                             </div>
                         </li>
-                        <li><a href="/page/contextpage_tem.html"><i class="fas fa-map-marker-alt"></i> Access</a></li>
+                        <li><a href="/page/contextpage_tem.html"><i class="fas fa-map-marker-alt"></i> Map</a></li>
                         <li><a href="/page/contextpage_tem.html"><i class="fas fa-building"></i> School Information</a>
                         </li>
                         <li><a href="/page/contextpage_tem.html"><i class="far fa-sticky-note"></i> Note</a></li>
@@ -94,7 +94,7 @@
         <main class="site-main ">
             <nav class="breadcrumb sp-hide">
                 <ol class="breadcrumb-wrap">
-                    <li><a href="../" class="fade"><i class="fas fa-home"></i> home</a></li>
+                    <li><a href="../" class="fade"><i class="fas fa-home"></i>Home</a></li>
                     <li><a href="../schoolguide/" class="fade">Introduction</a></li><!-- 4-2-->
                     <li>Introduction</li><!-- 5-1-->
                 </ol>
