--- a/public/faculty.html
+++ b/public/faculty.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Institute History</title>
+    <title>Administrative Unit</title>
     <meta name="viewport" content="width=device-width">
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
     <meta name="format-detection" content="telephone=no">
@@ -45,7 +45,7 @@
                                 </ul>
                             </div>
                         </li>
-                        <li><a href="map.html"><i class="fas fa-map-marker-alt"></i> Map</a></li>
+                        <li><a href="/page/contextpage_tem.html"><i class="fas fa-map-marker-alt"></i> Map</a></li>
                         <li><a href="/page/contextpage_tem.html"><i class="fas fa-building"></i> School Information</a>
                         </li>
                         <li><a href="/page/contextpage_tem.html"><i class="far fa-sticky-note"></i> Note</a></li>
@@ -89,22 +89,21 @@
                 <ol class="breadcrumb-wrap">
                     <li><a href="" class="fade"><i class="fas fa-home"></i>Home</a></li>
                     <li><a href="schoolguide/" class="fade">Introduction</a></li><!-- 4-2-->
-                    <li>Institute History</li><!-- 5-1-->
+                    <li>Administrative Unit</li><!-- 5-1-->
                 </ol>
             </nav>
             <!-- /.breadcrumb -->
             <section class="container">
                 <div class="container-wrap"><!-- .a-01 -->
                     <header class="a-01">
-                        <h2 class="tt ft36">Institute History</h2>
+                        <h2 class="tt ft36">Campus</h2>
                     </header><!-- /.a-01 --> <!-- .j-12b -->
-                    <section class="j-12b">
-                        <div class="j-12b_wrap">
-                            <p class="tx ft16">Hong Kong Institute of Technology (HKIT) dates back to 1997. It began as College of Info-Tech and became HKIT in October 2003 with the change of the English name . HKIT is the first institution in Hong Kong offering the same course in both full-time and part-time modes whilst allowing students to transfer between the two modes of study according to their employment situation. The school policies facilitate the students to continue their study whenever their employment situations allow.</p>
-                        </div>
-                    </section>
-                    <!-- /.j-12b -->
+
+
+
+
                 </div>
+                    <!-- /.j-12b -->
             </section>
 
             <div class="f-01">
