--- a/public/hkitmegpage.html
+++ b/public/hkitmegpage.html
@@ -39,14 +39,13 @@
                         <li><span class="toggle-switch"><i class="fas fa-question-circle"></i> FAQ</span>
                             <div class="site-header-nav-sub toggle-cont">
                                 <ul>
-                                    <li><a href="/page/contextpage_tem.html"><i class="fas fa-angle-right"></i>High
-                                            Dip</a></li>
+                                    <li><a href="/page/contextpage_tem.html"><i class="fas fa-angle-right"></i>High Dip</a></li>
                                     <li><a href="/page/contextpage_tem.html"><i
                                                 class="fas fa-angle-right"></i>Degree</a></li>
                                 </ul>
                             </div>
                         </li>
-                        <li><a href="/page/contextpage_tem.html"><i class="fas fa-map-marker-alt"></i> Access</a></li>
+                        <li><a href="map.html"><i class="fas fa-map-marker-alt"></i> Map</a></li>
                         <li><a href="/page/contextpage_tem.html"><i class="fas fa-building"></i> School Information</a>
                         </li>
                         <li><a href="/page/contextpage_tem.html"><i class="far fa-sticky-note"></i> Note</a></li>
@@ -88,7 +87,7 @@
         <main class="site-main ">
             <nav class="breadcrumb sp-hide">
                 <ol class="breadcrumb-wrap">
-                    <li><a href="#" class="fade"><i class="fas fa-home"></i> home</a></li>
+                    <li><a href="#" class="fade"><i class="fas fa-home"></i>Home</a></li>
                     <li><a href="schoolguide/" class="fade">Introduction</a></li><!-- 4-2-->
                     <li>Welcome Message</li><!-- 5-1-->
                 </ol>
