--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
                 </ul>
               </div>
             </li>
-            <li><a href="/page/contextpage_tem.html"><i class="fas fa-map-marker-alt"></i> Access</a></li>
+            <li><a href="map.html"><i class="fas fa-map-marker-alt"></i> Map</a></li>
             <li><a href="/page/contextpage_tem.html"><i class="fas fa-building"></i> School Information</a></li>
             <li><a href="/page/contextpage_tem.html"><i class="far fa-sticky-note"></i> Note</a></li>
           </ul>
