--- a/contextpage_tem.html
+++ b/contextpage_tem.html
@@ -40,8 +40,7 @@
                                 <ul>
                                     <li><a href="/page/contextpage_tem.html"><i class="fas fa-angle-right"></i>High
                                             Dip</a></li>
-                                    <li><a href="/page/contextpage_tem.html"><i
-                                                class="fas fa-angle-right"></i>Degree</a></li>
+                                    <li><a href="degree.html"><i class="fas fa-angle-right"></i>Degree</a></li>
                                 </ul>
                             </div>
                         </li>
@@ -94,7 +93,7 @@
         <main class="site-main ">
             <nav class="breadcrumb sp-hide">
                 <ol class="breadcrumb-wrap">
-                    <li><a href="../" class="fade"><i class="fas fa-home"></i>Home</a></li>
+                    <li><a href="../" class="fade"><i class="fas fa-home"></i> Home</a></li>
                     <li><a href="../schoolguide/" class="fade">Introduction</a></li><!-- 4-2-->
                     <li>Introduction</li><!-- 5-1-->
                 </ol>
