--- a/public/history.html
+++ b/public/history.html
@@ -28,7 +28,7 @@
     <div class="site-wrapper">
         <header class="site-header js-header-narrow">
             <div class="site-header-logo">
-                <a href="" class="fade">
+                <a href="index.html" class="fade">
                     <span class="logo"><img src="img/header/name.jpg"></span>
                 </a>
             </div>
@@ -39,9 +39,8 @@
                         <li><span class="toggle-switch"><i class="fas fa-question-circle"></i> FAQ</span>
                             <div class="site-header-nav-sub toggle-cont">
                                 <ul>
-                                    <li><a href="/page/contextpage_tem.html"><i class="fas fa-angle-right"></i>High Dip</a></li>
-                                    <li><a href="/page/contextpage_tem.html"><i
-                                                class="fas fa-angle-right"></i>Degree</a></li>
+                                    <li><a href="highdip.html"><i class="fas fa-angle-right"></i>High Dip</a></li>
+                                    <li><a href="degree.html"><i class="fas fa-angle-right"></i>Degree</a></li>
                                 </ul>
                             </div>
                         </li>
@@ -87,7 +86,7 @@
         <main class="site-main ">
             <nav class="breadcrumb sp-hide">
                 <ol class="breadcrumb-wrap">
-                    <li><a href="" class="fade"><i class="fas fa-home"></i>Home</a></li>
+                    <li><a href="" class="fade"><i class="fas fa-home"></i> Home</a></li>
                     <li><a href="schoolguide/" class="fade">Introduction</a></li><!-- 4-2-->
                     <li>Institute History</li><!-- 5-1-->
                 </ol>
