--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <header class="site-header ">
       <div class="site-header-logo">
         <a href="index.html" class="fade">
-          <span class="logo"><img src="/public/img/header/name.jpg"></span>
+          <span class="loindex.htmlgo"><img src="/public/img/header/name.jpg"></span>
         </a>
       </div>
       <!-- /.site-header-logo -->
@@ -37,7 +37,7 @@
             <li><span class="toggle-switch"><i class="fas fa-question-circle"></i> FAQ</span>
               <div class="site-header-nav-sub toggle-cont">
                 <ul>
-                  <li><a href="/page/contextpage_tem.html"><i class="fas fa-angle-right"></i>High Dip</a></li>
+                  <li><a href="highdip.html"><i class="fas fa-angle-right"></i>High Dip</a></li>
                   <li><a href="/page/contextpage_tem.html"><i class="fas fa-angle-right"></i>Degree</a></li>
                 </ul>
               </div>
