--- a/public/contact.html
+++ b/public/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HKIT Message</title>
+    <title>Contact Us</title>
     <meta name="viewport" content="width=device-width">
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
     <meta name="format-detection" content="telephone=no">
@@ -44,7 +44,7 @@
                                 </ul>
                             </div>
                         </li>
-                        <li><a href="map.html"><i class="fas fa-map-marker-alt"></i> Map</a></li>
+                        <li><a href="/page/contextpage_tem.html"><i class="fas fa-map-marker-alt"></i> Map</a></li>
                         <li><a href="/page/contextpage_tem.html"><i class="fas fa-building"></i> School Information</a>
                         </li>
                         <li><a href="/page/contextpage_tem.html"><i class="far fa-sticky-note"></i> Note</a></li>
@@ -86,24 +86,25 @@
         <main class="site-main ">
             <nav class="breadcrumb sp-hide">
                 <ol class="breadcrumb-wrap">
-                    <li><a href="#" class="fade"><i class="fas fa-home"></i> Home</a></li>
-                    <li><a href="schoolguide/" class="fade">Introduction</a></li><!-- 4-2-->
-                    <li>Welcome Message</li><!-- 5-1-->
+                    <li><a href="" class="fade"><i class="fas fa-home"></i> Home</a></li>
+                    <li><a href="schoolguide/" class="fade">About</a></li><!-- 4-2-->
+                    <li>Contact Us</li><!-- 5-1-->
                 </ol>
             </nav>
             <!-- /.breadcrumb -->
             <section class="container">
                 <div class="container-wrap"><!-- .a-01 -->
                     <header class="a-01">
-                        <h2 class="tt ft36">Welcome Message</h2>
+                        <h2 class="tt ft36">Contact Us</h2>
                     </header><!-- /.a-01 --> <!-- .j-12b -->
-                    <section class="j-12b">
-                        <div class="j-12b_wrap">
-                            <p class="tx ft16">Hong Kong Institute of Technology (HKIT) is a diversified, non-profit making and self-financed tertiary institute offering a wide range of programmes at post-secondary levels. As an international institute which emphasizes students' international exposure and diversity development, HKIT is the first institute which offers full-time and part-time overseas degrees which are both accredited in Hong Kong and internationally recognised. HKIT also offers accredited programmes ranging from Yi Jin level all the way to Associate Degree, overseas Bachelor Degree, Master Degree and Doctoral Degree. Students can choose from over 20 study areas in three major aspects: Arts, Business Administration, and Science and Technology. All these programmes are accredited by the Hong Kong Council for Accreditation of Academic and Vocational Qualifications (HKCAAVQ).</p>
-                        </div>
-                    </section>
-                    <!-- /.j-12b -->
+                    <ul>
+                        <li class=""><i class="fa fa-phone"></i> <a href="tel:27822433"> +852 2782 2433</a></li> 
+                        <li class=""><i class="fab fa-whatsapp"></i> <a href="https://wa.me/85295743789?text=Hello%21+I+want+to+inquire+about+HKIT+course+information."> +852 9574 3789</a> </li> 
+                        <li class=""><i class="fab fa-whatsapp"></i> <a href="https://wa.me/85295742876?text=Hello%21+I+want+to+inquire+about+HKIT+course+information."> +852 9574 2876</a> </li> 
+                        <li class=""><i class="fa fa-envelope-open"></i> <a href="mailto:enquiry@hkit.edu.hk"> enquiry@hkit.edu.hk</a></li>	
+                    </ul>
                 </div>
+                    <!-- /.j-12b -->
             </section>
 
             <div class="f-01">
