--- a/contextpage_tem.html
+++ b/contextpage_tem.html
@@ -45,9 +45,9 @@
                             </div>
                         </li>
                         <li><a href="/page/contextpage_tem.html"><i class="fas fa-map-marker-alt"></i> Map</a></li>
-                        <li><a href="/page/contextpage_tem.html"><i class="fas fa-building"></i> School Information</a>
+                        <li><a href="/page/contextpage_tem.html"><i class="fas fa-book"></i> Library</a>
                         </li>
-                        <li><a href="/page/contextpage_tem.html"><i class="far fa-sticky-note"></i> Note</a></li>
+                        <li><a href="/page/contextpage_tem.html"><i class="far fa-sticky-note"></i> Login</a></li>
                     </ul>
                     <div class="site-header-lang sp-hide">
                         <a href="/page/contextpage_tem.html" target="_blank"><i class="far fa-file-alt"></i> go out side
@@ -149,7 +149,7 @@
 
                     <!-- .a-05 -->
                     <header class="a-05">
-                        <h6 class="tt ft26">link</h6>
+                        <h6 class="tt ft26">News</h6>
                     </header>
                     <!-- /.a-05 -->
 
