--- a/public/contact.html
+++ b/public/contact.html
@@ -44,15 +44,15 @@
                                 </ul>
                             </div>
                         </li>
-                        <li><a href="/page/contextpage_tem.html"><i class="fas fa-map-marker-alt"></i> Map</a></li>
-                        <li><a href="/page/contextpage_tem.html"><i class="fas fa-building"></i> School Information</a>
+                        <li><a href="map.html"><i class="fas fa-map-marker-alt"></i> Map</a></li>
+                        <li><a href="/page/contextpage_tem.html"><i class="fas fa-book"></i> Library</a>
                         </li>
-                        <li><a href="/page/contextpage_tem.html"><i class="far fa-sticky-note"></i> Note</a></li>
+                        <li><a href="/page/contextpage_tem.html"><i class="far fa-sticky-note"></i> Login</a></li>
                     </ul>
-                    <div class="site-header-lang sp-hide">
+                    <!-- <div class="site-header-lang sp-hide">
                         <a href="/page/contextpage_tem.html" target="_blank"><i class="far fa-file-alt"></i> go out side
                             <i class="fas fa-fw fa-external-link-alt"></i></a>
-                    </div>
+                    </div> -->
 
                     <div class="site-header-menu">
                         <div class="menu-toggle toggle-switch"><i class="fas fa-bars"></i><i class="fas fa-times"></i>
@@ -86,7 +86,7 @@
         <main class="site-main ">
             <nav class="breadcrumb sp-hide">
                 <ol class="breadcrumb-wrap">
-                    <li><a href="" class="fade"><i class="fas fa-home"></i> Home</a></li>
+                    <li><a href="index.html" class="fade"><i class="fas fa-home"></i> Home</a></li>
                     <li><a href="schoolguide/" class="fade">About</a></li><!-- 4-2-->
                     <li>Contact Us</li><!-- 5-1-->
                 </ol>
@@ -97,11 +97,11 @@
                     <header class="a-01">
                         <h2 class="tt ft36">Contact Us</h2>
                     </header><!-- /.a-01 --> <!-- .j-12b -->
-                    <ul>
-                        <li class=""><i class="fa fa-phone"></i> <a href="tel:27822433"> +852 2782 2433</a></li> 
-                        <li class=""><i class="fab fa-whatsapp"></i> <a href="https://wa.me/85295743789?text=Hello%21+I+want+to+inquire+about+HKIT+course+information."> +852 9574 3789</a> </li> 
-                        <li class=""><i class="fab fa-whatsapp"></i> <a href="https://wa.me/85295742876?text=Hello%21+I+want+to+inquire+about+HKIT+course+information."> +852 9574 2876</a> </li> 
-                        <li class=""><i class="fa fa-envelope-open"></i> <a href="mailto:enquiry@hkit.edu.hk"> enquiry@hkit.edu.hk</a></li>	
+                    <ul class="contactus">
+                        <li><i class="fa fa-phone"></i> <a href="tel:27822433"> +852 2782 2433</a></li> 
+                        <li><i class="fab fa-whatsapp"></i> <a href="https://wa.me/85295743789?text=Hello%21+I+want+to+inquire+about+HKIT+course+information."> +852 9574 3789</a> </li> 
+                        <li><i class="fab fa-whatsapp"></i> <a href="https://wa.me/85295742876?text=Hello%21+I+want+to+inquire+about+HKIT+course+information."> +852 9574 2876</a> </li> 
+                        <li><i class="fa fa-envelope-open"></i> <a href="mailto:enquiry@hkit.edu.hk"> enquiry@hkit.edu.hk</a></li>	
                     </ul>
                 </div>
                     <!-- /.j-12b -->
@@ -111,45 +111,15 @@
                 <div class="f-01_wrap">
                     <!-- .a-05 -->
                     <header class="a-05">
-                        <h6 class="tt ft26">link</h6>
+                        <h6 class="tt ft26">News</h6>
                     </header>
                     <!-- /.a-05 -->
                     <!-- .c-05b -->
                     <div class="c-05b">
                         <div class="c-05b_wrap">
-                            <ul>
-                                <li><a href="schoolguide/diary/">schoolevent
-                                        <i class="fas fa-angle-right"></i>
-                                    </a></li>
-                                <li><a href="schoolguide/kengaku.html">schoolevent
-                                        <i class="fas fa-angle-right"></i>
-                                    </a></li>
-
-                                <li><a href="schoolguide/origin.html">schoolevent
-                                        <i class="fas fa-angle-right"></i>
-                                    </a></li>
-
-                                <li><a href="schoolguide/trait.html">schoolevent
-                                        <i class="fas fa-angle-right"></i>
-                                    </a></li>
-
-                                <li><a href="schoolguide/history.html">schoolevent
-                                        <i class="fas fa-angle-right"></i>
-                                    </a></li>
-
-                                <li><a href="schoolguide/campusmap.html">schoolevent
-                                        <i class="fas fa-angle-right"></i>
-                                    </a></li>
-
-                                <li><a href="schoolguide/pamphlet.html">schoolevent
-                                        <i class="fas fa-angle-right"></i>
-                                    </a></li>
-
-                                <li><a href="schoolguide/movie.html">schoolevent
-                                        <i class="fas fa-angle-right"></i>
-                                    </a></li>
-
-                            </ul>
+                            <table class="news-table">
+                                
+                            </table>
                         </div>
                     </div>
                     <!-- /.c-05b -->
@@ -208,26 +178,6 @@
                 <div class="logo">
                     <img src="img/footer/logo512.png">
                 </div>
-
-                <div class="site-footer-link-index sp-hide">
-                    <ul>
-                        <li><a href="/">Topics</a></li>
-                        <li><a href="/pickup/">PICK UP</a></li>
-                        <li><a href="/news/">News &amp; Topics</a></li>
-                    </ul>
-                </div>
-                <!-- /.site-footer-link-index -->
-                <div class="site-footer-nav sp-hide">
-                    <ul>
-                        <li><a href="/target/admission-js/">Topics</a></li>
-                        <li><a href="/target/admission-hs/">Topics</a></li>
-                        <li><a href="/target/admission-re/">Topics</a></li>
-                        <li><a href="/target/student/">Topics</a></li>
-                        <li><a href="/target/graduate.html">Topics</a></li>
-                    </ul>
-                </div>
-                <!-- /.site-footer-link-index -->
-
                 <div class="wrap sp-hide">
                     <div class="grid-container" id="footer-nav"></div>
                     <!-- /.site-footer-top -->
@@ -236,14 +186,6 @@
                             <div class="ft-txt">
                                 <div class="logo">
                                     <a href="/"><img src="img/header/name.jpg"></a>
-                                </div>
-                                <div class="group-sites">
-                                    <ul>
-                                        <li><a href="/gakuen/" target="_blank">school</a></li>
-                                        <li><a href="#" target="_blank">school</a></li>
-                                        <li><a href="/university/" target="_blank">school</a></li>
-                                        <li><a href="#" target="_blank">school</a></li>
-                                    </ul>
                                 </div>
                             </div>
                             <div class="copyright">Copyright &copy; All Rights Reserved.</div>
@@ -257,6 +199,7 @@
     </div>
     <!-- /.site-wrapper -->
 
+        <script src="js/news.js"></script>
     <script src="js/navbar.js"></script>
     <script src="js/imagesloaded.pkgd.min.js"></script>
     <script src="js/masonry.pkgd.min.js"></script>
