--- a/public/vision.html
+++ b/public/vision.html
@@ -45,9 +45,9 @@
                             </div>
                         </li>
                         <li><a href="map.html"><i class="fas fa-map-marker-alt"></i> Map</a></li>
-                        <li><a href="/page/contextpage_tem.html"><i class="fas fa-building"></i> School Information</a>
+                        <li><a href="/page/contextpage_tem.html"><i class="fas fa-book"></i> Library</a>
                         </li>
-                        <li><a href="/page/contextpage_tem.html"><i class="far fa-sticky-note"></i> Note</a></li>
+                        <li><a href="/page/contextpage_tem.html"><i class="far fa-sticky-note"></i> Login</a></li>
                     </ul>
                     <div class="site-header-lang sp-hide">
                         <a href="/page/contextpage_tem.html" target="_blank"><i class="far fa-file-alt"></i> go out side
@@ -86,7 +86,7 @@
         <main class="site-main ">
             <nav class="breadcrumb sp-hide">
                 <ol class="breadcrumb-wrap">
-                    <li><a href="" class="fade"><i class="fas fa-home"></i> Home</a></li>
+                    <li><a href="index.html" class="fade"><i class="fas fa-home"></i> Home</a></li>
                     <li><a href="schoolguide/" class="fade">Introduction</a></li><!-- 4-2-->
                     <li>Vision & Mission</li><!-- 5-1-->
                 </ol>
@@ -114,45 +114,15 @@
                 <div class="f-01_wrap">
                     <!-- .a-05 -->
                     <header class="a-05">
-                        <h6 class="tt ft26">link</h6>
+                        <h6 class="tt ft26">News</h6>
                     </header>
                     <!-- /.a-05 -->
                     <!-- .c-05b -->
                     <div class="c-05b">
                         <div class="c-05b_wrap">
-                            <ul>
-                                <li><a href="schoolguide/diary/">schoolevent
-                                        <i class="fas fa-angle-right"></i>
-                                    </a></li>
-                                <li><a href="schoolguide/kengaku.html">schoolevent
-                                        <i class="fas fa-angle-right"></i>
-                                    </a></li>
-
-                                <li><a href="schoolguide/origin.html">schoolevent
-                                        <i class="fas fa-angle-right"></i>
-                                    </a></li>
-
-                                <li><a href="schoolguide/trait.html">schoolevent
-                                        <i class="fas fa-angle-right"></i>
-                                    </a></li>
-
-                                <li><a href="schoolguide/history.html">schoolevent
-                                        <i class="fas fa-angle-right"></i>
-                                    </a></li>
-
-                                <li><a href="schoolguide/campusmap.html">schoolevent
-                                        <i class="fas fa-angle-right"></i>
-                                    </a></li>
-
-                                <li><a href="schoolguide/pamphlet.html">schoolevent
-                                        <i class="fas fa-angle-right"></i>
-                                    </a></li>
-
-                                <li><a href="schoolguide/movie.html">schoolevent
-                                        <i class="fas fa-angle-right"></i>
-                                    </a></li>
-
-                            </ul>
+                            <table class="news-table">
+                                
+                            </table>
                         </div>
                     </div>
                     <!-- /.c-05b -->
@@ -260,6 +230,7 @@
     </div>
     <!-- /.site-wrapper -->
 
+        <script src="js/news.js"></script>
     <script src="js/navbar.js"></script>
     <script src="js/imagesloaded.pkgd.min.js"></script>
     <script src="js/masonry.pkgd.min.js"></script>
