--- a/public/degree.html
+++ b/public/degree.html
@@ -45,9 +45,9 @@
                             </div>
                         </li>
                         <li><a href="map.html"><i class="fas fa-map-marker-alt"></i> Map</a></li>
-                        <li><a href="/page/contextpage_tem.html"><i class="fas fa-book"></i> Library</a>
+                        <li><a href="library.html"><i class="fas fa-book"></i> Library</a>
                         </li>
-                        <li><a href="/page/contextpage_tem.html"><i class="far fa-sticky-note"></i> Login</a></li>
+                        <li><a href="login.html"><i class="far fa-sticky-note"></i> Login</a></li>
                     </ul>
                     <div class="site-header-menu">
                         <div class="menu-toggle toggle-switch"><i class="fas fa-bars"></i><i class="fas fa-times"></i>
@@ -249,32 +249,32 @@
                     <div class="footer-banner-silder-container">
                         <div class="swiper-wrapper">
 
-                            <div class="swiper-slide"><a class="fade" href="/page/contextpage_tem.html" target="_blank">
+                            <div class="swiper-slide"><a class="fade" href="" target="_blank">
                                     <img src="../upload/download.jpeg">
                                 </a>
                             </div>
 
-                            <div class="swiper-slide"><a class="fade" href="/ss/exploration/">
+                            <div class="swiper-slide"><a class="fade" href="">
                                     <img src="../upload/download (1).jpeg">
                                 </a>
                             </div>
 
-                            <div class="swiper-slide"><a class="fade" href="/schoolguide/pamphlet.html">
+                            <div class="swiper-slide"><a class="fade" href="">
                                     <img src="../upload/download (2).jpeg">
                                 </a>
                             </div>
 
-                            <div class="swiper-slide"><a class="fade" href="/info/office/">
+                            <div class="swiper-slide"><a class="fade" href="">
                                     <img src="../upload/download (3).jpeg">
                                 </a>
                             </div>
 
-                            <div class="swiper-slide"><a class="fade" href="/page/contextpage_tem.html" target="_blank">
+                            <div class="swiper-slide"><a class="fade" href="" target="_blank">
                                     <img src="../upload/download (4).jpeg">
                                 </a>
                             </div>
 
-                            <div class="swiper-slide"><a class="fade" href="/page/contextpage_tem.html">
+                            <div class="swiper-slide"><a class="fade" href="">
                                     <img src="../upload/download (5).jpeg">
                                 </a>
                             </div>
