--- a/public/faculty.html
+++ b/public/faculty.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Administrative Unit</title>
+    <title>Faculty Unit</title>
     <meta name="viewport" content="width=device-width">
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
     <meta name="format-detection" content="telephone=no">
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="css/add.css">
     <link rel="stylesheet" href="css/add2022.css">
     <link rel="stylesheet" href="css/add2022.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="js/cssua.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
 </head>
@@ -45,9 +46,9 @@
                             </div>
                         </li>
                         <li><a href="map.html"><i class="fas fa-map-marker-alt"></i> Map</a></li>
-                        <li><a href="/page/contextpage_tem.html"><i class="fas fa-book"></i> Library</a>
+                        <li><a href="library.html"><i class="fas fa-book"></i> Library</a>
                         </li>
-                        <li><a href="/page/contextpage_tem.html"><i class="far fa-sticky-note"></i> Login</a></li>
+                        <li><a href="login.html"><i class="far fa-sticky-note"></i> Login</a></li>
                     </ul>
                     <div class="site-header-menu">
                         <div class="menu-toggle toggle-switch"><i class="fas fa-bars"></i><i class="fas fa-times"></i>
@@ -82,30 +83,46 @@
             <nav class="breadcrumb sp-hide">
                 <ol class="breadcrumb-wrap">
                     <li><a href="index.html" class="fade"><i class="fas fa-home"></i> Home</a></li>
-                    <li><a href="schoolguide/" class="fade">Introduction</a></li><!-- 4-2-->
-                    <li>Administrative Unit</li><!-- 5-1-->
+                    <li><a href="introduction.html" class="fade">Introduction</a></li><!-- 4-2-->
+                    <li>Faculty Unit</li><!-- 5-1-->
                 </ol>
             </nav>
             <!-- /.breadcrumb -->
             <section class="container">
                 <div class="container-wrap"><!-- .a-01 -->
                     <header class="a-01">
-                        <h2 class="tt ft36">Campus</h2>
-                    </header><!-- /.a-01 --> <!-- .j-12b -->
-
-                    <div id="pageright-container">
-                        <div id="breadcrumb">
-                            <ul id="breadcrumbs-one">
-                                <li><a href="index.php"><span class="fa fa-home"></span> &nbsp;</a></li>
-                                <li><a href="news.php">News & Event</a></li>
-                                <li><a href="#">HKIT News</a></li>
-                            </ul>
-                        </div>
-
+                        <h2 class="tt ft36">Faculty Unit</h2>
+                    </header>
+                    <div class="facu">
+                        <a  class="" href="https://www.hkit.edu.hk/en/about-hkit/structure/faculty-unit/?f=business" >
+                            <div class="main-box card h-100 shadow-sm">
+                                <img src="https://www.hkit.edu.hk/en/images/courses/business3.jpg" class="card-img-top" alt="Faculty of Business">
+                                <div class="card-body bg-blue2 text-center text-white"><h3 class="text-center">
+                                    <i class="fa-solid fa-chart-line fa-4x  mb-2"></i>
+                                    <br />Faculty of Business</h3>
+                                </div>
+                            </div>
+                        </a>
+                        <a  class="" href="https://www.hkit.edu.hk/en/about-hkit/structure/faculty-unit/?f=science" >
+                            <div class="main-box card h-100 shadow-sm"> 
+                                <img src="https://www.hkit.edu.hk/en/images/courses/science1.jpg" class="card-img-top" alt="Faculty of Science and Technology">
+                                <div class="card-body bg-blue2 text-center text-white"><h3 class="text-center">
+                                    <i class="fa-solid fa-flask-vial fa-4x  mb-2"></i>
+                                    <br />Faculty of Science and Technology</h3>
+                                </div>
+                            </div>
+                        </a>
+                        <a  class="" href="https://www.hkit.edu.hk/en/about-hkit/structure/faculty-unit/?f=dyj" >
+                            <div class="main-box card h-100 shadow-sm">
+                                <img src="https://www.hkit.edu.hk/en/images/courses/dyj1.jpg" class="card-img-top" alt="Diploma Yi Jin">
+                                <div class="card-body bg-blue2 text-center text-white"><h3 class="text-center">
+                                    <i class="fa-solid fa-chess-rook fa-4x  mb-2"></i>
+                                    <br />Diploma Yi Jin</h3>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
                 </div>
-
-                </div>
-                    <!-- /.j-12b -->
             </section>
 
             <div class="f-01">
@@ -137,32 +154,32 @@
                     <div class="footer-banner-silder-container">
                         <div class="swiper-wrapper">
 
-                            <div class="swiper-slide"><a class="fade" href="/page/contextpage_tem.html" target="_blank">
+                            <div class="swiper-slide"><a class="fade" href="" target="_blank">
                                     <img src="../upload/download.jpeg">
                                 </a>
                             </div>
 
-                            <div class="swiper-slide"><a class="fade" href="/ss/exploration/">
+                            <div class="swiper-slide"><a class="fade" href="">
                                     <img src="../upload/download (1).jpeg">
                                 </a>
                             </div>
 
-                            <div class="swiper-slide"><a class="fade" href="/schoolguide/pamphlet.html">
+                            <div class="swiper-slide"><a class="fade" href="">
                                     <img src="../upload/download (2).jpeg">
                                 </a>
                             </div>
 
-                            <div class="swiper-slide"><a class="fade" href="/info/office/">
+                            <div class="swiper-slide"><a class="fade" href="">
                                     <img src="../upload/download (3).jpeg">
                                 </a>
                             </div>
 
-                            <div class="swiper-slide"><a class="fade" href="/page/contextpage_tem.html" target="_blank">
+                            <div class="swiper-slide"><a class="fade" href="" target="_blank">
                                     <img src="../upload/download (4).jpeg">
                                 </a>
                             </div>
 
-                            <div class="swiper-slide"><a class="fade" href="/page/contextpage_tem.html">
+                            <div class="swiper-slide"><a class="fade" href="">
                                     <img src="../upload/download (5).jpeg">
                                 </a>
                             </div>
