--- a/public/hkitmegpage.html
+++ b/public/hkitmegpage.html
@@ -45,9 +45,9 @@
                             </div>
                         </li>
                         <li><a href="map.html"><i class="fas fa-map-marker-alt"></i> Map</a></li>
-                        <li><a href="/page/contextpage_tem.html"><i class="fas fa-book"></i> Library</a>
+                        <li><a href="library.html"><i class="fas fa-book"></i> Library</a>
                         </li>
-                        <li><a href="/page/contextpage_tem.html"><i class="far fa-sticky-note"></i> Login</a></li>
+                        <li><a href="login.html"><i class="far fa-sticky-note"></i> Login</a></li>
                     </ul>
                     <div class="site-header-menu">
                         <div class="menu-toggle toggle-switch"><i class="fas fa-bars"></i><i class="fas fa-times"></i>
@@ -81,8 +81,8 @@
         <main class="site-main ">
             <nav class="breadcrumb sp-hide">
                 <ol class="breadcrumb-wrap">
-                    <li><a href="#" class="fade"><i class="fas fa-home"></i> Home</a></li>
-                    <li><a href="schoolguide/" class="fade">Introduction</a></li><!-- 4-2-->
+                    <li><a href="index.html" class="fade"><i class="fas fa-home"></i> Home</a></li>
+                    <li><a href="introduction.html" class="fade">Introduction</a></li><!-- 4-2-->
                     <li>Welcome Message</li><!-- 5-1-->
                 </ol>
             </nav>
@@ -130,32 +130,32 @@
                     <div class="footer-banner-silder-container">
                         <div class="swiper-wrapper">
 
-                            <div class="swiper-slide"><a class="fade" href="/page/contextpage_tem.html" target="_blank">
+                            <div class="swiper-slide"><a class="fade" href="" target="_blank">
                                     <img src="../upload/download.jpeg">
                                 </a>
                             </div>
 
-                            <div class="swiper-slide"><a class="fade" href="/ss/exploration/">
+                            <div class="swiper-slide"><a class="fade" href="">
                                     <img src="../upload/download (1).jpeg">
                                 </a>
                             </div>
 
-                            <div class="swiper-slide"><a class="fade" href="/schoolguide/pamphlet.html">
+                            <div class="swiper-slide"><a class="fade" href="">
                                     <img src="../upload/download (2).jpeg">
                                 </a>
                             </div>
 
-                            <div class="swiper-slide"><a class="fade" href="/info/office/">
-                                    <img src="../upload/download (3).jpeg">
+                            <div class="swiper-slide"><a class="fade" href="">
+                             <img src="../upload/download (3).jpeg">
                                 </a>
                             </div>
 
-                            <div class="swiper-slide"><a class="fade" href="/page/contextpage_tem.html" target="_blank">
+                            <div class="swiper-slide"><a class="fade" href="" target="_blank">
                                     <img src="../upload/download (4).jpeg">
                                 </a>
                             </div>
 
-                            <div class="swiper-slide"><a class="fade" href="/page/contextpage_tem.html">
+                            <div class="swiper-slide"><a class="fade" href="">
                                     <img src="../upload/download (5).jpeg">
                                 </a>
                             </div>
