--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <header class="site-header ">
       <div class="site-header-logo">
         <a href="index.html" class="fade">
-          <span class="loindex.htmlgo"><img src="/public/img/header/name.jpg"></span>
+          <span class="loindex.htmlgo"><img src="/public/img/header/schoolname.png"></span>
         </a>
       </div>
       <!-- /.site-header-logo -->
@@ -43,13 +43,17 @@
               </div>
             </li>
             <li><a href="map.html"><i class="fas fa-map-marker-alt"></i> Map</a></li>
-            <li><a href="library.html"><i class="fas fa-book"></i> Library</a></li>
-            <li><a href="login.html"><i class="far fa-sticky-note"></i> Login</a></li>
+            <!-- <li><a href="library.html"><i class="fas fa-book"></i> Library</a></li> -->
+            <li><a href="login.html"><i class="far fa-sticky-note"></i> Login 
+              <i class="fas fa-fw fa-external-link-alt"></i></a></li>
           </ul>
           <!-- <div class="site-header-lang sp-hide">
-            <a href="/page/contextpage_tem.html" target="_blank"><i class="far fa-file-alt"></i> go out side <i
-                class="fas fa-fw fa-external-link-alt"></i></a>
+            <a href="/page/contextpage_tem.html" target="_blank"><i class="far fa-file-alt"></i> go out side 
+              <i class="fas fa-fw fa-external-link-alt"></i></a>
           </div> -->
+          <div class="site-header-lang sp-hide">
+            
+          </div>
 
           <div class="site-header-menu">
             <div class="menu-toggle toggle-switch"><i class="fas fa-bars"></i><i class="fas fa-times"></i></div>
@@ -58,12 +62,12 @@
             </div>
           </div>
           <div class="site-header-search">
-            <div class="search-toggle toggle-switch2"><i class="fas fa-search"></i></div>
+            <div class="search-toggle toggle-switch2">&nbsp;<i class="fas fa-book"></i>&nbsp;Library&nbsp;<i class="fas fa-search"></i>&nbsp;</div>
             <div class="search-cont toggle-cont2" style="z-index: 100;">
               <div class="dummy"></div>
               <div class="search-cont-wrap">
                 <form method="get" action="search.html">
-                  <input class="search-input" type="text" placeholder="search" name="q" value="">
+                  <input class="search-input" type="text" placeholder="search book" name="q" value="">
                   <button class="search-submit fade" type="submit">search</button>
                 </form>
               </div>
@@ -398,7 +402,7 @@
         <div class="wrap">
           <div class="ft-txt">
             <div class="logo">
-              <a href="/"><img src="/public/img/header/name.jpg"></a>
+              <a href="/"><img src="/public/img/header/schoolname.png"></a>
             </div>
             <!-- <div class="group-sites">
               <ul>
