--- a/public/administrative.html
+++ b/public/administrative.html
@@ -29,7 +29,7 @@
         <header class="site-header js-header-narrow">
             <div class="site-header-logo">
                 <a href="index.html" class="fade">
-                    <span class="logo"><img src="img/header/name.jpg"></span>
+                    <span class="logo"><img src="img/header/schoolname.png"></span>
                 </a>
             </div>
             <!-- /.site-header-logo -->
@@ -45,8 +45,7 @@
                             </div>
                         </li>
                         <li><a href="map.html"><i class="fas fa-map-marker-alt"></i> Map</a></li>
-                        <li><a href="library.html"><i class="fas fa-book"></i> Library</a>
-                        </li>
+ 
                         <li><a href="login.html"><i class="far fa-sticky-note"></i> Login</a></li>
                     </ul>
                     <!-- <div class="site-header-lang sp-hide">
@@ -60,12 +59,12 @@
                         <div class="menu-cont toggle-cont" id="menu-nav"></div>
                     </div>
                     <div class="site-header-search">
-                        <div class="search-toggle toggle-switch2"><i class="fas fa-search"></i></div>
+                        <div class="search-toggle toggle-switch2">&nbsp;<i class="fas fa-book"></i>&nbsp;Library&nbsp;<i class="fas fa-search"></i>&nbsp;</div>
                         <div class="search-cont toggle-cont2" style="z-index: 100;">
                             <div class="dummy"></div>
                             <div class="search-cont-wrap">
                                 <form method="get" action="search.html">
-                                    <input class="search-input" type="text" placeholder="search" name="q" value="">
+                                    <input class="search-input" type="text" placeholder="search book" name="q" value="">
                                     <button class="search-submit fade" type="submit">search</button>
                                 </form>
                             </div>
@@ -245,7 +244,7 @@
                         <div class="wrap">
                             <div class="ft-txt">
                                 <div class="logo">
-                                    <a href="/"><img src="img/header/name.jpg"></a>
+                                    <a href="/"><img src="img/header/schoolname.png"></a>
                                 </div>
                             </div>
                             <div class="copyright">Copyright &copy; All Rights Reserved.</div>
