--- a/public/library.html
+++ b/public/library.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Events</title>
+    <title>Library</title>
     <meta name="viewport" content="width=device-width">
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
     <meta name="format-detection" content="telephone=no">
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="css/add.css">
     <link rel="stylesheet" href="css/add2022.css">
     <link rel="stylesheet" href="css/add2022.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="css/libsearch.css">
     <script src="js/cssua.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
 </head>
@@ -46,7 +46,7 @@
                             </div>
                         </li>
                         <li><a href="map.html"><i class="fas fa-map-marker-alt"></i> Map</a></li>
- 
+
                         <li><a href="login.html"><i class="far fa-sticky-note"></i> Login</a></li>
                     </ul>
                     <div class="site-header-menu">
@@ -55,7 +55,8 @@
                         <div class="menu-cont toggle-cont" id="menu-nav"></div>
                     </div>
                     <div class="site-header-search">
-                        <div class="search-toggle toggle-switch2">&nbsp;<i class="fas fa-book"></i>&nbsp;Library&nbsp;<i class="fas fa-search"></i>&nbsp;</div>
+                        <div class="search-toggle toggle-switch2">&nbsp;<i class="fas fa-book"></i>&nbsp;Library&nbsp;<i
+                                class="fas fa-search"></i>&nbsp;</div>
                         <div class="search-cont toggle-cont2" style="z-index: 100;">
                             <div class="dummy"></div>
                             <div class="search-cont-wrap">
@@ -82,21 +83,72 @@
             <nav class="breadcrumb sp-hide">
                 <ol class="breadcrumb-wrap">
                     <li><a href="index.html" class="fade"><i class="fas fa-home"></i> Home</a></li>
-                    <li><a href="" class="fade">News & Events</a></li><!-- 4-2-->
-                    <li>Events</li><!-- 5-1-->
+                    <li><a href="library.html" class="fade">Library</a></li><!-- 4-2-->
                 </ol>
             </nav>
             <!-- /.breadcrumb -->
             <section class="container">
                 <div class="container-wrap"><!-- .a-01 -->
                     <header class="a-01">
-                        <h2 class="tt ft36">Events</h2>
+                        <h2 class="tt ft36">Library</h2>
                     </header>
-                    <table class="events-table">
-                        
+                    <div class="searchbox">
+                        <button class="typebutton active">book name</button><button class="typebutton">book
+                            author</button>
+                        <form method="get" action="search.html" class="libsearch">
+                            <input class="search-input" type="text" placeholder="search book name" name="q" value="">
+                            <button class="search-submit fade" type="submit">search</button>
+                        </form>
+                        <form method="get" action="search.html" class="libsearch hide">
+                            <input class="search-input" type="text" placeholder="search book author" name="q" value="">
+                            <button class="search-submit fade" type="submit">search</button>
+                        </form>
+                    </div>
+                    <table class="resultbox">
+                        <tr>
+                            <th>Book ID</th>
+                            <th>Book Name</th>
+                            <th>Category</th>
+                            <th>Book Status</th>
+                            <th>Borrow Now</th>
+                        </tr>
+                        <tr>
+                            <th>1</th>
+                            <th>book name book name book name book name book name book name book name book name book name book name book name </th>
+                            <th>technology</th>
+                            <th><div class="book-status on">available</div></th>
+                            <th><button class="bookresult-btn">Borrow</button></th>
+                        </tr>
+                        <tr>
+                            <th>2</th>
+                            <th>book nameame</th>
+                            <th>technology</th>
+                            <th><div class="book-status">unavailable</div></th>
+                            <th><span class="bookresult-btn off">Borrow</span></th>
+                        </tr>
                     </table>
                 </div>
             </section>
+
+            <div class="f-01">
+                <div class="f-01_wrap">
+                    <!-- .a-05 -->
+                    <header class="a-05">
+                        <h6 class="tt ft26">News</h6>
+                    </header>
+                    <!-- /.a-05 -->
+                    <!-- .c-05b -->
+                    <div class="c-05b">
+                        <div class="c-05b_wrap">
+                            <table class="news-table">
+
+                            </table>
+                        </div>
+                    </div>
+                    <!-- /.c-05b -->
+                </div>
+            </div>
+            <!-- /.f-01 -->
         </main>
 
         <!-- .container -->
@@ -170,6 +222,7 @@
     </div>
     <!-- /.site-wrapper -->
 
+    <script src="js/libsearch.js"></script>
     <script src="js/news.js"></script>
     <script src="js/navbar.js"></script>
     <script src="js/imagesloaded.pkgd.min.js"></script>
